err/noolite-mqtt-webserver.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/aiodns'...
Listing './lib/python3.5/site-packages/aiodns-1.1.1.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp'...
Listing './lib/python3.5/site-packages/aiohttp-2.3.7.dist-info'...
Listing './lib/python3.5/site-packages/aiohttp_jinja2'...
Listing './lib/python3.5/site-packages/aiohttp_jinja2-0.14.0.dist-info'...
Listing './lib/python3.5/site-packages/async_timeout'...
Listing './lib/python3.5/site-packages/async_timeout-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/cchardet'...
Listing './lib/python3.5/site-packages/cchardet-2.1.1.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/hbmqtt'...
Listing './lib/python3.5/site-packages/hbmqtt/mqtt'...
Listing './lib/python3.5/site-packages/hbmqtt/mqtt/protocol'...
Listing './lib/python3.5/site-packages/hbmqtt/plugins'...
Listing './lib/python3.5/site-packages/hbmqtt/plugins/sys'...
Listing './lib/python3.5/site-packages/hbmqtt-0.9.1.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/multidict'...
Listing './lib/python3.5/site-packages/multidict-3.3.2.dist-info'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver/noolite_mqtt'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver/static'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver/static/bootstrap-3.3.7'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver/static/bootstrap-3.3.7/css'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver/static/bootstrap-3.3.7/fonts'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver/static/bootstrap-3.3.7/js'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver/static/css'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver/static/js'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver/systemd_script'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver/templates'...
Listing './lib/python3.5/site-packages/noolite_mqtt_webserver-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/passlib'...
Listing './lib/python3.5/site-packages/passlib/_data'...
Listing './lib/python3.5/site-packages/passlib/_data/wordsets'...
Listing './lib/python3.5/site-packages/passlib/crypto'...
Listing './lib/python3.5/site-packages/passlib/crypto/_blowfish'...
Listing './lib/python3.5/site-packages/passlib/crypto/scrypt'...
Listing './lib/python3.5/site-packages/passlib/ext'...
Listing './lib/python3.5/site-packages/passlib/ext/django'...
Listing './lib/python3.5/site-packages/passlib/handlers'...
Listing './lib/python3.5/site-packages/passlib/tests'...
Listing './lib/python3.5/site-packages/passlib/utils'...
Listing './lib/python3.5/site-packages/passlib/utils/compat'...
Listing './lib/python3.5/site-packages/passlib-1.7.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycares'...
Listing './lib/python3.5/site-packages/pycares-2.3.0.dist-info'...
Listing './lib/python3.5/site-packages/scripts'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/mqtt'...
Listing './lib/python3.5/site-packages/tests/mqtt/protocol'...
Listing './lib/python3.5/site-packages/tests/plugins'...
Listing './lib/python3.5/site-packages/transitions'...
Listing './lib/python3.5/site-packages/transitions/extensions'...
Listing './lib/python3.5/site-packages/transitions-0.6.4.dist-info'...
Listing './lib/python3.5/site-packages/websockets'...
Listing './lib/python3.5/site-packages/websockets/extensions'...
Listing './lib/python3.5/site-packages/websockets/py35'...
Listing './lib/python3.5/site-packages/websockets-4.0.1.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/yarl'...
Listing './lib/python3.5/site-packages/yarl-0.18.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
